--- a/backend/topgun-airline/build.gradle
+++ b/backend/topgun-airline/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
+	implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.0.Final'
+
 }
 
 tasks.named('test') {
