--- a/backend/topgun-airline/src/main/resources/application.properties
+++ b/backend/topgun-airline/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=never
+
 
